--- a/src/css/style.css
+++ b/src/css/style.css
@@ -442,7 +442,7 @@ header{
 @media screen and (min-width: 768px) {
   .dropdown{
     min-height: 300px;
-    height: 300px;
+    /* height: 300px; */
     top:30px;
   }
 
